# rust-service-template

./: Cargo.toml  README.md
template/: Cargo.toml  README.md
template/.github/workflows/: ci.yml
template/src/: main.rs
