[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
description = "{{project-description}}"
repository = "https://github.com/{{gh-username}}/{{project-name}}"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
tracing = "0.1.37"
tracing-actix-web = "0.7.5"
tonic = { version = "0.9.2", features = ["tls"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.17", features = ["default", "env-filter"]}
tracing-futures = "0.2.5"
tracing-attributes = "0.1.26"
utoipa-swagger-ui = { version="3", features=["actix-web"]}
serde_json = "1.0.79"
tsync = "1"

[dependencies.utoipa]
features = ["actix_extras", "chrono", "openapi_extensions"]
version = "3.3.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.133"